# imageSplit

./: .gitignore  README.org  imageSplit.cabal  stack.yaml
app/: Main.hs  MultiCut.hs
