name:                imageSplit
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/meditans/imageSplit#readme
license:             BSD3
license-file:        LICENSE
author:              Carlo Nucera
maintainer:          meditans@gmail.com
copyright:           2015 Carlo Nucera
category:            tutorial
build-type:          Simple
cabal-version:       >=1.10

executable imageSplit-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       JuicyPixels
                     , JuicyPixels-util
                     , base
                     , bytestring
                     , foldl
                     , gloss
                     , gloss-juicy
                     , imageSplit
                     , imagemagick
                     , lens
                     , text
                     , turtle
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/meditans/imageSplit
